--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,17 @@
-﻿asgiref==3.3.4
+﻿asgiref==3.11.0
 beautifulsoup4==4.9.3
 dj-database-url==0.5.0
-Django==3.2
+Django==6.0
 django-bootstrap4==3.0.0
 django-crispy-forms==1.11.2
-django-heroku==0.3.1
+django-on-heroku==1.1.0
 gunicorn==20.1.0
 importlib-metadata==2.1.1
-Pillow==8.2.0
-psycopg2==2.7.7
-psycopg2-binary==2.8.5
+Pillow
 pytz==2021.1
 soupsieve==2.2.1
-sqlparse==0.4.1
+sqlparse==0.5.4
 typing-extensions==3.7.4.3
 whitenoise==5.2.0
 zipp==3.4.1
+psycopg2-binary==2.9.11
